--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1611,6 +1611,30 @@ p label
     opacity:1;
 }
 
+#tableDBF {
+//    width:392px;
+	font-family:'Droid Serif', serif;!important;
+//    height:392px;
+ //   font-size:12px;
+    font-size:20px;
+    border:0 0 40px 0;
+    margin:0 0 80px 0;
+	background-color:#005555;
+//    z-index:4;
+	text-shadow:none;
+    opacity:1;
+}
+.ui-page-theme-a .ui-panel-wrapper #tableDBF
+{
+	text-shadow:none;
+}
+
+.ui-page-theme-a .ui-page-active #tableDBF
+{
+	text-shadow:0 1px 0 #00f300;
+}
+
+
 #cal table {
 //    width:392px;
 //    height:392px;
